update readme e script js

--- a/index copy.html
+++ b/index copy.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temporizador de gemas de ovos</title>
     <link rel="stylesheet" href="Assets/CSS/estilo.css"/>
-    <script src="script.js" defer></script>
+    <script src="Assets\JS\script.js" defer></script>
 
 </head>
 <body>
+
     <div id="titulo">
     <h1>Escolha a gema de sua preferência</h1>
     </div>
@@ -18,7 +19,7 @@
             <img src="Assets/Img/mole.png" width="250" alt="mole">
             <div>
             <label>
-            <input value="gema_mole" name="preferencia" type="radio" id="gema_mole" checked > Mole
+            <input value="Gema mole" name="preferencia" type="radio" id="Gema Mole" checked > Mole
             </label>
             </div>
         </div>
@@ -27,7 +28,7 @@
             <img src="Assets/Img/media.png" width="250" alt="media">
             <div>
             <label>
-            <input value="gema_media" name="preferencia" type="radio" id="gema_media"> Média
+            <input value="Gema media" name="preferencia" type="radio" id="Gema media"> Media
             </label>
             </div>
         </div>
@@ -36,17 +37,15 @@
             <img src="Assets/Img/Dura.png" width="250" alt="dura">
             <div>
             <label>
-            <input value="gema_dura" name="preferencia" type="radio" id="gema_dura"> Dura
+            <input value="Gema dura" name="preferencia" type="radio" id="Gema Dura"> Dura
             </label>
             </div>
         </div>
     </div>
 
-    <div><button class="botao" type="submit" onclick="start()">Início</button></div>
+    <div><button class="botao" type="submit">Início</button></div>
 
-    <div id="timer">
-        <h2>00:00:00</h2>
-    </div>
+    <div id="timer"></div>
         
 </body>
 </html>
