--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
         </div>
     </div>
         <div><button class="botao" type="submit" onclick="startTimer()" id="start">Início</button></div>
-    <div id="res">Selecione a opção desejada</div>
-    <audio id="audio" src="alarm.mp3" style="display: none;"></audio>
+    <div id="res">
+        Selecione a opção desejada
+    </div>
+    <!--<audio id="audio" src="alarm.mp3" style="display: none;"></audio> -->
     <div id="timer">
         <h2>00:00:00</h2>
     </div>
